it has logback integrated and logback writing to file as well as console

--- a/Portfolio/portfolio/src/main/resources/application.properties
+++ b/Portfolio/portfolio/src/main/resources/application.properties
@@ -5,9 +5,13 @@ spring.datasource.username=postgres
 spring.datasource.password=Pos@1203
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+logging.level.com.rajesh.pms.portfolio=ERROR
+
+
 #spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-#spring.security.user=user1
-#spring.security.password=demo@123
+#spring.security.user.name=user1
+#spring.security.user.password=demo@123
