--- a/Portfolio/portfolio/pom.xml
+++ b/Portfolio/portfolio/pom.xml
@@ -65,6 +65,18 @@
     <version>2.3.1</version>
 </dependency>
 
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+   <!-- <version>1.4.11</version> -->
+</dependency>
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-core</artifactId>
+  <!--  <version>1.4.11</version>  -->
+</dependency>
+
+
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-security</artifactId>
